add: Overflow scroll within tasks container

--- a/src/styles/components/_task.scss
+++ b/src/styles/components/_task.scss
@@ -1,43 +1,49 @@
-.task {
-	position: relative;
-	padding: 1rem 0;
-	border-top: 1px solid $lightgray;
-
-	&:last-of-type {
-		border-bottom: 1px solid $lightgray;
-	}
-
-	.check-mark {
+.tasks {
+	height: calc(850px - 372px);
+	overflow-y: scroll;
+	
+	.task {
 		position: relative;
-		top: 3px;
-		margin-right: 2rem;
-		cursor: pointer;
+		display: block;
+		padding: 1rem 0;
+		border-top: 1px solid $lightgray;
 
-		&:hover path {
-			fill: white;
+		&:last-of-type {
+			border-bottom: 1px solid $lightgray;
 		}
 
-		&:hover circle {
-			stroke: $green;
-			fill: $green;
+		.check-mark {
+			position: relative;
+			top: 3px;
+			margin-right: 2rem;
+			cursor: pointer;
+
+			&:hover path {
+				fill: white;
+			}
+
+			&:hover circle {
+				stroke: $green;
+				fill: $green;
+			}
 		}
-	}
 
-	.trash-can {
-		position: absolute;
-		top: 50%;
-		right: 0;
-		transform: translateY(-50%);
-		cursor: pointer;
+		.trash-can {
+			position: absolute;
+			top: 50%;
+			right: 0;
+			transform: translateY(-50%);
+			cursor: pointer;
 
-		&:hover path {
-			fill: $red;
+			&:hover path {
+				fill: $red;
+			}
 		}
-	}
 
-	.text {
-		display: inline-block;
-		color: white;
-		font-size: 1.6rem;
+		.text {
+			display: inline-block;
+			color: white;
+			font-size: 1.6rem;
+		}
 	}
 }
