add: Display and styling for no tasks

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,3 +2,8 @@ html {
 	font-size: 62.5%;
 	font-family: 'Inter', sans-serif; 
 }
+
+.blue {
+	color: $primary-blue;
+	text-decoration: underline;
+}
