--- a/src/styles/components/_task.scss
+++ b/src/styles/components/_task.scss
@@ -1,12 +1,22 @@
 .tasks {
 	height: calc(850px - 372px);
 	overflow-y: scroll;
+
+	.no-tasks {
+		padding-top: 1rem;
+		font-size: 1.6rem;
+		color: white;
+	}
 	
 	.task {
 		position: relative;
 		display: block;
 		padding: 1rem 0;
 		border-top: 1px solid $lightgray;
+
+		&:first-of-type {
+			border: none;
+		}
 
 		&:last-of-type {
 			border-bottom: 1px solid $lightgray;
