--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,8 @@
 .header {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 4rem;
+	padding-bottom: 4rem;
+	border-bottom: 1px solid $lightgray;
 
 	p {
 		margin: 0;
